test/files/neg/t7850.check
t7850.scala:11: error: an unapply result must have a member `def isEmpty: Boolean (found: def isEmpty: Casey)
    val Casey(x1) = new Casey(1)
        ^
t7850.scala:12: error: an unapply result must have a member `def isEmpty: Boolean
    val Dingy(x2) = new Dingy(1)
        ^
two errors found
